--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
+
   <h1>Coin Flipper</h1>
-  <video src="video/gone.mp4" id="video" class="screen" poster="img/poster.png"></video>
+  <div class="main-container">
+
+    <div class="video-container">
+      <img src="./img/poster.png" alt="Live-Stream" id="video">
+    </div>
+
+    <div class="other-container">
+
+    </div>
+  </div>
+
+
   <script src="script.js"></script>
 </body>
 </html>                        
