added result container

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     </div>
 
     <div class="other-container">
-
+      <div class="result-container">
+        <span>Result:</span>
+        <span class="result">Heads</span>
+      </div>
+        <button class="flip-btn">Flip Coin</button>
     </div>
   </div>
 
