--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <h1>Coin Flipper</h1>
+  <h1 class="heading">Coin Flipper</h1>
   <div class="main-container">
 
     <div class="video-container">
