--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div class="wave wave3"></div>
     <div class="wave wave4"></div>
     
+    <img src="2021.svg" alt="" class="second-img">
+
     <h1 class="heading">Coin Flipper</h1>
     
     <div class="main-container">
