--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CoinFlipper</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://unpkg.com/pattern.css" rel="stylesheet">
 </head>
 <body>
 
-  <section>
+  <section class="pattern-diagonal-lines-xl">
     <div class="wave wave1"></div>
     <div class="wave wave2"></div>
     <div class="wave wave3"></div>
