--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
     <div class="main-container">
     
       <div class="video-container">
-        <img src="assets/poster.png" alt="Live-Stream" id="video">
+        <div class="video">
+          <!-- VIDEO -->
+          <img src="assets/play2.svg" alt="Live-Stream" id="video">
+        </div>
       </div>
   
       <div class="other-container">
@@ -36,7 +39,7 @@
           <span>Result:</span>
           <span class="result">Heads</span>
         </div>
-          <button class="flip-btn">Flip Coin</button>
+          <button class="flip-btn" onclick="rotate2021()">Flip Coin</button>
       </div>
     </div>
   </section>
