--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="navbar">
       <img src="assets/logo-black.png" alt="LOGO" class="logo">
-      <h1 class="heading">Coin Flipper</h1>
+      <h1 class="heading">Flip Your Vibe</h1>
     </div>
     
     <div class="main-container">
